crates/gameready-cli/tests/snapshots/snapshots__a_dry_run_previews_without_asking_for_a_password.snap
---
source: crates/gameready-cli/tests/snapshots.rs
expression: "run_with(&[\"init\", \"--dry-run\", \"--yes\"], Reads :: Fixture, | _, _ | {})"
---
exit code: 0
----- stdout -----

Here's what I'll do

  Games     Cyberpunk 2077, Deadlock, Slay the Spire 2
  System    4 tunings · memory, Wine and Proton, the CPU, the overlay
  Per game  launch options ×3, Proton pin ×2
  Overlay   off
  Undo      gameready rollback · any time, no reboot

  Dry run: nothing below actually happens.
----------------------------------------------------------------------------------------------------

2 packages to install · 184 MB

  ┃ mangohud · 5 MB
  ┃ draws frame rate, frame times and temperatures over the game
  ┃ so you can check whether any of this actually helped

  ┃ scx · 178 MB
  ┃ the sched_ext CPU schedulers, scx_lavd among them
  ┃ lavd cannot be loaded without it

  ! Rollback restores your config, but leaves packages installed. Removing them is your call, not
    mine.

Dry run. 5 would apply · 2 already set · 2 not applicable

  • Competing daemons         no competing daemons found
  • I/O schedulers            nvme0n1 on none
  - Swappiness                swap is on disk, not zram; the default swappiness is right
  - Proton-GE                 Steam root not found
  - vm.max_map_count          dry run
  - gamemode + mangohud       dry run
  - scx repository            dry run
  - CPU speed                 dry run
  - CPU scheduler scx_lavd    dry run

  Nothing was touched. Drop --dry-run to apply.
----------------------------------------------------------------------------------------------------

Per-game settings

  * Cyberpunk 2077
    - Go to Steam > right click the game > Properties
    - Under General, put this into Launch Options: gamemoderun %command%
    - Under Compatibility, tick the box and pick: GE-Proton11-3
  * Deadlock
    - Go to Steam > right click the game > Properties
    - Under General, put this into Launch Options: gamemoderun %command%
    - Under Compatibility, tick the box and pick: GE-Proton11-3
  * Slay the Spire 2
    - Go to Steam > right click the game > Properties
    - Under General, put this into Launch Options: gamemoderun %command%

----- stderr -----
