crates/gameready-cli/tests/snapshots/snapshots__explain_an_unknown_step_names_the_ones_that_exist.snap
---
source: crates/gameready-cli/tests/snapshots.rs
expression: "run_with(&[\"explain\", \"core.sysctl.max-map-conut\"], Reads :: Fixture,\n| _, _ | {})"
---
exit code: 2
----- stdout -----

----- stderr -----
gameready: no step named `core.sysctl.max-map-conut`. There is: core.conflicts, core.sysctl.max-map-count, core.sysctl.split-lock, core.sysctl.vm-latency, core.io.scheduler, core.memory.swappiness, core.pkg.tools, core.gamemode.config, core.gpu.shader-cache, core.proton.ge, core.cpu.governor
