crates/gameready-cli/tests/snapshots/snapshots__explain_lists_every_step.snap
---
source: crates/gameready-cli/tests/snapshots.rs
expression: "gameready(&[\"explain\"])"
---
exit code: 0
----- stdout -----
Steps

  core.conflicts              Check for daemons that compete with gamemode
  core.sysctl.max-map-count   Raise vm.max_map_count for Proton titles
  core.io.scheduler           Set each disk's I/O scheduler
  core.memory.swappiness      Raise vm.swappiness for zram swap
  core.pkg.tools              Install gamemode and mangohud
  core.proton.ge              Install latest Proton-GE
  core.repo.scx-ppa           Add the scx package repository
  core.sched.scx-lavd         Switch the CPU scheduler to scx_lavd
  core.cpu.governor           Leave the CPU governor to gamemode

  Run `gameready explain <id>` for what one of them would do here.
--------------------------------------

----- stderr -----
