crates/gameready-cli/tests/snapshots/snapshots__help_says_what_every_command_is_for.snap
---
source: crates/gameready-cli/tests/snapshots.rs
expression: "run_with(&[\"--help\"], Reads :: Fixture, | _, _ | {})"
---
exit code: 0
----- stdout -----
gameready 0.2.0 · tune a Linux desktop for gaming, and undo it.

Start here
  init       Find your games, ask what you want, apply it.
  rollback   Put everything back. Any run, any time.

Look before you leap
  doctor     What your machine is, and what each tuning would do.
  explain    One tuning: why it exists, and what it'd change here.
  list-games The game profiles I can see, and where each came from.

For scripts and repeat runs
  apply      Apply, optionally one tuning: --step <id>
  selftest   Apply, verify, revert, verify. Proves a tuning works.

Anywhere
  --dry-run  Work out the plan, change nothing.
  --yes      Take every default, install without asking.
  --json     The run report as JSON instead of this.

  Everything gameready changes is reversible, except installing a package. It says so before it
  installs one.
----------------------------------------------------------------------------------------------------

----- stderr -----
