crates/gameready-cli/tests/snapshots/snapshots__rollback_puts_a_run_back_and_says_what_it_did.snap
---
source: crates/gameready-cli/tests/snapshots.rs
expression: "run_with(&[\"rollback\"], Reads::ThisMachine, seed_a_finished_run)"
---
exit code: 0
----- stdout -----

Putting back the run from 10 Aug, 12:50

  ✓ demo.conf · removed

1 reverted

  journal · [TMP]

----- stderr -----
