crates/gameready-cli/tests/snapshots/snapshots__rollback_with_nothing_to_undo_says_so_rather_than_reporting_an_empty_run.snap
---
source: crates/gameready-cli/tests/snapshots.rs
expression: "run_with(&[\"rollback\"], | _, _ | {})"
---
exit code: 2
----- stdout -----

----- stderr -----
gameready: the journal has no runs to undo
